Arreglar autenticacion y remover carpetas del restreo